@@ -1,41 +1,30 @@
 package by.ita.je.controllers;
 
 import by.ita.je.dto.KettleDto;
-import by.ita.je.mappers.KettleMapper;
+import by.ita.je.mappers.KettleMapperToDto;
 import by.ita.je.models.Kettle;
 import by.ita.je.services.KettleService;
 import org.springframework.web.bind.annotation.*;
 
-import java.math.BigDecimal;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(path = "/kettle")
 public class KettleController {
     private final KettleService kettleService;
-    private final KettleMapper kettleMapper;
-    public KettleController(KettleService kettleService, KettleMapper kettleMapper) {
+    private final KettleMapperToDto kettleMapper;
+    public KettleController(KettleService kettleService, KettleMapperToDto kettleMapper) {
         this.kettleService = kettleService;
+
         this.kettleMapper = kettleMapper;
     }
 
     @PostMapping("/create")
     public KettleDto create(){
-        Kettle kettle = Kettle.builder()
-                .number(5)
-                .type("glass")
-                .color("blue")
-                .isElectric(false)
-                .isInduction(false)
-                .price(BigDecimal.valueOf(30.33))
-                .energy('A')
-                .registered(ZonedDateTime.now())
-                .build();
-        Kettle kettleNew = kettleService.insertKettle(kettle);
-        return kettleMapper.toDTO(kettleNew);
+        Kettle kettleNew = kettleService.createKettle();
+        Kettle kettleInsert = kettleService.insertKettle(kettleNew);
+        return kettleMapper.toDTO(kettleInsert);
     }
 
     @GetMapping("/read")
@@ -45,7 +34,7 @@ public class KettleController {
 
     @GetMapping("/read/all")
     public List<KettleDto> readAll(){
-        return kettleService.readALL().stream().map(kettleMapper::toDTO).toList();
+        return kettleService.readALL().stream().map(kettleMapper::toDTO).collect(Collectors.toList());
     }
 
     @PutMapping("/update")
@@ -54,11 +43,6 @@ public class KettleController {
         if (kettle == null) {
             return null;
         }
-
-        kettle.setType("glass");
-        kettle.setColor("pink");
-        kettle.setPrice(BigDecimal.valueOf(122.22));
-
         Kettle updateKettle = kettleService.updateKettle(kettle);
         return kettleMapper.toDTO(updateKettle);
     }
