@@ -1,40 +1,29 @@
 package by.ita.je.controllers;
 
 import by.ita.je.dto.MulticookerDto;
-import by.ita.je.mappers.MulticookerMapper;
+import by.ita.je.mappers.MulticookerMapperToDto;
 import by.ita.je.models.Multicooker;
 import by.ita.je.services.MulticookerService;
 import org.springframework.web.bind.annotation.*;
-import java.math.BigDecimal;
-import java.time.ZonedDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(path = "/multicooker")
 public class MulticookerController {
     private final MulticookerService multicookerService;
-    private final MulticookerMapper multicookerMapper;
+    private final MulticookerMapperToDto multicookerMapper;
 
-    public MulticookerController(MulticookerService multicookerService, MulticookerMapper multicookerMapper) {
+    public MulticookerController(MulticookerService multicookerService, MulticookerMapperToDto multicookerMapper) {
         this.multicookerService = multicookerService;
         this.multicookerMapper = multicookerMapper;
     }
 
     @PostMapping("/create")
     public MulticookerDto create(){
-        Multicooker multicooker = Multicooker.builder()
-                .number(5)
-                .type("Tefal")
-                .description("бла-бла-бла")
-                .isTouchScreen(true)
-                .numberModes(10)
-                .price(BigDecimal.valueOf(1000.5))
-                .number(5)
-                .energy('A')
-                .registered(ZonedDateTime.now())
-                .build();
-        Multicooker multicookerNew = multicookerService.insertMulticooker(multicooker);
-        return multicookerMapper.toDTO(multicookerNew);
+        Multicooker multicookerNew = multicookerService.createMulticooker();
+        Multicooker multicookerInsert = multicookerService.insertMulticooker(multicookerNew);
+        return multicookerMapper.toDTO(multicookerInsert);
     }
 
     @GetMapping("/read")
@@ -44,7 +33,7 @@ public class MulticookerController {
 
     @GetMapping("/read/all")
     public List<MulticookerDto> readAll(){
-        return multicookerService.readALL().stream().map(multicookerMapper::toDTO).toList();
+        return multicookerService.readALL().stream().map(multicookerMapper::toDTO).collect(Collectors.toList());
     }
 
     @PutMapping("/update")
@@ -53,11 +42,6 @@ public class MulticookerController {
         if (multicooker == null) {
             return null;
         }
-
-        multicooker.setType("NonRemovablePanels");
-        multicooker.setDescription("Grill");
-        multicooker.setPrice(BigDecimal.valueOf(100.99));
-
         Multicooker multicookerNew = multicookerService.updateMulticooker(multicooker);
         return multicookerMapper.toDTO(multicookerNew);
     }
